# GPRD

./: .gitignore  CMakeLists.txt  GraphicPulseRateDetector.sln
GraphicPulseRateDetector/: Functions.cpp  Functions.h  GetPulse.cpp  GetPulse.h  GraphicPulseRateDetector.cpp  GraphicPulseRateDetector.vcxproj  GraphicPulseRateDetector.vcxproj.filters  ReadMe.txt  Source.cpp  stdafx.cpp
GraphicPulseRateDetector/Debug/: GraphicPulseRateDetector.pch  vc140.idb
GraphicPulseRateDetector/Debug/GraphicP.50CEAACA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicPulseRateDetector.lastbuildstate
GraphicPulseRateDetector/x64/Debug/: GraphicPulseRateDetector.pch  vc140.idb
GraphicPulseRateDetector/x64/Debug/GraphicP.50CEAACA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicPulseRateDetector.lastbuildstate
GraphicPulseRateDetector/x64/Release/: GraphicPulseRateDetector.pch
GraphicPulseRateDetector/x64/Release/GraphicP.50CEAACA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicPulseRateDetector.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ipch/GRAPHICPULSERATEDETECTOR-315ddb53/: GRAPHICPULSERATEDETECTOR-a9996a57.ipch  GRAPHICPULSERATEDETECTOR-c82304d1.ipch  GRAPHICPULSERATEDETECTOR-d68544b9.ipch
